# GrpcWithTonic

./: README.md
calculator_tutorial/: Cargo.toml  build.rs
calculator_tutorial/proto/: calculator.proto
calculator_tutorial/src/: client.rs  main.rs  tower_middleware_tutorial.rs
login_server/: Cargo.toml  Makefile.toml  build.rs
login_server/.cargo/: config.toml
login_server/db/: docker-compose.yml
login_server/db/sql/: recreate_db.sql
login_server/db/sql/migrations/: 0001_recreate_tables.sql  0002_seed_user.sql
login_server/proto/: auth.proto  login_server.proto  user.proto
login_server/src/: error.rs  get_env.rs  integration_tests.rs  main.rs  proto.rs  request_context.rs
login_server/src/crypt/: jwt.rs  mod.rs  password.rs  tests.rs
login_server/src/data_access/: base_crud.rs  mod.rs
login_server/src/data_access/db_setup/: mod.rs  tests.rs
login_server/src/data_access/user_controller/: mod.rs  tests.rs
login_server/src/grpc/: mod.rs
login_server/src/grpc/middlewares/: auth_layer.rs  mod.rs  mw_implant_request_context.rs  mw_implant_request_context_and_renew_jwt.rs  mw_require_request_context.rs
login_server/src/grpc/services/: auth.rs  user.rs
login_server/src/log/: tracing.rs
login_server/src/utils/: base64.rs  mod.rs  tests.rs  time.rs  traits.rs
login_server/src/utils/proc-macros/: Cargo.toml  README.md
login_server/src/utils/proc-macros/src/: lib.rs
login_server/src/views/: user.rs
