[package]
name = "calculator_tutorial"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.13.0"
tonic-reflection = "0.13.0"

[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.13.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
