[package]
name = "login_server"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
tokio = { version = "1.44.2", features = ["full"] }

# tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# utils
proc-macros = { path="./src/utils/proc-macros" }

[dev-dependencies]
serial_test = "3.2.0"
