[package]
name = "login_server"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
tokio = { version = "1.44.2", features = ["full"] }

# tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# utils
proc-macros = { path="./src/utils/proc-macros" }
uuid = { version = "1.16.0", features = ["v4"] }
argon2 = "0.5.3"
blake2 = "0.10.6"
base64 = "0.22.1"
time = "0.3.41"
tonic = "0.13.0"
prost = "0.13.5"

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
tonic-build = "0.13.0"
